# b-httpd

./: .gitignore  .gitmodules  CMakeLists.txt  HTTP_request.txt  HTTP_response.txt  README.md  build.sh
http/: common.h  debug.cpp  http_base.cpp  http_base.h  http_content_parser.cpp  http_content_parser.h  http_file_handler.cpp  http_file_handler.h  http_headers.cpp  http_headers.h  http_headers_parser.cpp  http_headers_parser.h  http_interface_handler_base.h  http_interface_handler_map.cpp  http_interface_handler_map.h  http_parser.cpp  http_parser.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_sock_stream.cpp  http_sock_stream.h
httpd/: http_service_handler.cpp  http_service_handler.h
utils/: message_block.cpp  message_block.h  message_block.inl  task.h  thread_pool.cpp  thread_pool.h  utils.cpp  utils.h
